--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "test:e2e:ci": "jest test/*.e2e-spec.ts --ci --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/lib-storage": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -39,6 +42,8 @@
     "compression": "^1.8.1",
     "helmet": "^8.1.0",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "nest-winston": "^1.10.2",
     "pactum-json-reporter": "^1.0.2",
     "passport": "^0.7.0",
@@ -47,6 +52,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "speakeasy": "^2.0.0",
+    "uuid": "^13.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -59,6 +65,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
@@ -66,6 +73,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
