--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,10 @@ DEFAULT_COINS=0
 DEFAULT_ENERGY=1000
 DEFAULT_ENERGY_LIMIT=1000
 INITIAL_LEVEL=1
+
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_S3_BUCKET_NAME=
